# guess.com

./: .gitignore  Cargo.toml  DockerFile  Dockerfile  README.md  nginx.conf  start.sh
src/: chess_game.rs  helpers.rs  main.rs  ws.rs
src/js/: chess_client.js
src/routes/: game.rs  lobby.rs  matchmaking.rs  mod.rs
src/views/: board.rs  layout.rs  mod.rs  pieces.rs
