[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
chess = "3.2.0"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync"] }
topcoat = { version = "0.1.3", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
tokio-tungstenite = "0.24.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

